[tool.poetry]
name = "sim7020py"
version = "0.2.0"
description = ""
authors = ["Antonii Lupandin"]
readme = "README.md"
packages = [{ include = "sim7020py" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
asttokens = "^2.4.1"
executing = "^2.1.0"
colorama = "^0.4.6"
rich = "^13.9.3"
ruff = "^0.7.1"
loguru = "^0.7.2"
pygments = "^2.18.0"
python-decouple = "^3.8"    # TODO почитать за decouple


[tool.poetry.group.dev.dependencies]
sphinx = "^8.1.3"
sphinx-autodoc-typehints = "^2.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
